--- a/index.html
+++ b/index.html
@@ -8,33 +8,38 @@
   </head>
   <body>
     <header class="header">
-      <a href="#">
-        <img src="./images/WebStudio.svg" alt="logo" width="150" />
-      </a>
       <nav>
+        <a href="#">Webstudio</a>
+
         <ul>
-          <li>Студия</li>
-          <li>Портфолио</li>
-          <li>Контакты</li>
+          <li class="nav1">
+            <a href="#">Студия</a>
+          </li>
+          <li class="nav2">
+            <a href="#">Портфолио</a>
+          </li>
+          <li class="nav3">
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <div>
-        <ul>
-          <li>
-            <a href="emailto:info@devstudio.com">info@devstudio.com </a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+380961111111</a>
-          </li>
-        </ul>
-      </div>
+
+      <ul>
+        <li>
+          <a href="emailto:info@devstudio.com">info@devstudio.com </a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+380961111111</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section>
         <h1 class="main">Эффективные решения для вашего бизнеса</h1>
-        <button class="strong">Заказать услугу</button>
+        <button type ="button "class="button">Заказать услугу</button>
       </section>
-      <div class="impotent">
+      <section class="impotent">
+        <h2>Наши особенности</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -65,7 +70,7 @@
             </p>
           </li>
         </ul>
-      </div>
+      </section>
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul class="action">
@@ -142,9 +147,8 @@
       </section>
     </main>
     <footer>
-      <a href="#">
-        <img src="./images/WebStudio.svg" alt="logo" width="100" />
-      </a>
+      <a href="#">Webstudio</a>
+
       <address>
         <ul>
           <li>
