--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <ul>
         <li>
-          <a href="emailto:info@devstudio.com">info@devstudio.com </a>
+          <a href="mailto:info@devstudio.com">info@devstudio.com </a>
         </li>
         <li>
           <a href="tel:+380961111111">+380961111111</a>
